# openssl-rsa-256bit-encrypt

./: Makefile.am  README.md  askey-locker.pc.in  configure.ac
inc/: askey_locker.h
src/: Makefile.am  askey_locker.c
test/: Makefile.am  test.c
